--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@ title: Nardoz
     <tr>
       <td>02/07/2015</td>
       <td>
-        <strong>Rust 1.0: Conceptos principales y diferenciales</strong> por Nicolás Meléndez
+        <strong>Nardoz de Rust</strong> 
+        <ol>
+          <li><strong>Conceptos principales y diferenciales</strong> por Nicolás Meléndez</li>
+          <li><strong>Construir una Base de Datos en Rust</strong> por Sebastian Waisbrot</li>
+        </ol>
       </td>
     </tr>
     <tr>
