--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ title: Nardoz
 <p>Las charlas son tan variadas como los intereses del grupo: desde <strong>programación</strong>, <strong>Big Data</strong> y <strong>sistemas distribuídos</strong>, hasta <strong>Open Hardware</strong> y <strong>Open Data</strong>.
 </p>
 <p>
-  Algunos integrantes de Nardoz aportan activamente a la comunidad de Datos Abiertos, tanto desarrollando nuevas herramientas y visualizaciones, como participando en eventos afines. 
+  Sumate a la nuestra comunidad de Slack! 
+</p>
+<p>
+  <script async defer src="https://slack.nardoz.com/slackin.js"></script>
 </p>
 
 <hr>
