added slack link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Nardoz
   Sumate a la nuestra comunidad de Slack! 
 </p>
 <p>
-  <script async defer src="https://slack.nardoz.com/slackin.js"></script>
+  <script async defer src="http://slack.nardoz.com/slackin.js"></script>
 </p>
 
 <hr>
