added twitter handles

--- a/talks.html
+++ b/talks.html
@@ -9,7 +9,7 @@ title: Talks
     <h1>Talks</h1>
   </div>
 
-  <h3>Año 2015</h3>
+  <h3>2015</h3>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -21,7 +21,11 @@ title: Talks
       <tr>
         <td>02/07/2015</td>
         <td>
-          <strong>Rust 1.0: Conceptos principales y diferenciales</strong> por Nicolás Meléndez
+          <strong>Nardoz de Rust</strong> 
+          <ol>
+            <li><strong>Conceptos principales y diferenciales</strong> por <a href="https://twitter.com/nfmelendez">@nfmelendez</a></li>
+            <li><strong>Construir una Base de Datos en Rust</strong> por <a href="https://twitter.com/seppo0010">@seppo0010</a></li>
+          </ol>
         </td>
       </tr>
       <tr>
@@ -33,7 +37,7 @@ title: Talks
     </tbody>
   </table>
 
-  <h3>Año 2014</h3>
+  <h3>2014</h3>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -45,7 +49,7 @@ title: Talks
       <tr>
         <td>23/09/2014</td>
         <td>
-          <strong>Edge.js</strong> por Tomasz Janczuk
+          <strong>Edge.js</strong> por <a href="https://twitter.com/tjanczuk">@tjanczuk</a>
         </td>
       </tr>
       <tr>
@@ -57,38 +61,37 @@ title: Talks
       <tr>
         <td>13/08/2014</td>
         <td>
-          <strong>Apache Spark: Un framework de procesamiento rápido a gran escala</strong> por Gustavo Arjones
+          <strong>Apache Spark: Un framework de procesamiento rápido a gran escala</strong> por <a href="https://twitter.com/arjones">@arjones</a>
         </td>
       </tr>
       <tr>
         <td>14/05/2014</td>
         <td>
-          <strong>Criptonardoz: Introducción a la criptografía</strong> por Andrés Quijano
+          <strong>Criptonardoz: Introducción a la criptografía</strong> por <a href="https://twitter.com/quixote_arg">@quixote_arg</a>
         </td>
       </tr>
       <tr>
         <td>24/04/2014</td>
         <td>
-          <strong>Nardoz de Escalabilidad de Juegos Masivos con Google Cloud</strong> por Hernan Liendo
+          <strong>Nardoz de Escalabilidad de Juegos Masivos con Google Cloud</strong> por <a href="https://twitter.com/hernanliendo">@hernanliendo</a>
         </td>
       </tr>
       <tr>
         <td>25/02/2014</td>
         <td>
-          <strong>Nardoz de Criptomonedas</strong> por Manu Aráoz
+          <strong>Nardoz de Criptomonedas</strong> por <a href="https://twitter.com/maraoz">@maraoz</a>
         </td>
       </tr>
       <tr>
         <td>17/02/2014</td>
         <td>
-          <strong>Where's my straw? What does a drive-thru have to teach us about optimization of tools and processes?</strong> por Kyle Simpson
+          <strong>Where's my straw? What does a drive-thru have to teach us about optimization of tools and processes?</strong> por <a href="https://twitter.com/getify">@getify</a>
         </td>
      </tr>
     </tbody>
   </table>
 
-  <h3>Año 2013</h3>
-
+  <h3>2013</h3>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -97,16 +100,16 @@ title: Talks
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>17/12/2013</td>
-        <td>
-          <strong>Asado de fin de año</strong> 
-        </td>
-     </tr>
+       <tr>
+          <td>17/12/2013</td>
+          <td>
+            <strong>Asado de fin de año</strong> 
+          </td>
+       </tr>
       <tr>
         <td>04/12/2013</td>
         <td>
-          <strong>Nardoz de UI/UX: Elementos de diseño de interfaces</strong> por Davo Galavotti
+          <strong>Nardoz de UI/UX: Elementos de diseño de interfaces</strong> por <a href="https://twitter.com/pixelbeat">@pixelbeat</a>
         </td>
      </tr>
       <tr>
@@ -114,15 +117,15 @@ title: Talks
         <td>
           <strong>Nardoz de virtualización</strong>
           <ol>
-            <li><strong>Vagrant: Creando ambientes de desarrollo aislados y replicables</strong> <br />por Guido Marucci Blas</li>
-            <li><strong>Docker</strong> por Fernando Rodriguez Olivera</li>
+            <li><strong>Vagrant: Creando ambientes de desarrollo aislados y replicables</strong> <br />por <a href="https://twitter.com/guidomb">@guidomb</a></li>
+            <li><strong>Docker</strong> por <a href="https://twitter.com/frodriguez">@frodriguez</a></li>
           </ol>
         </td>
      </tr>
       <tr>
         <td>05/10/2013</td>
         <td>
-          <strong>Coffeescript &amp; Backbone + Q&amp;A</strong> por Jeremy Ashkenas (Creador de Backbone, Coffescript y Underscore)<br />
+          <strong>Coffeescript &amp; Backbone + Q&amp;A</strong> por <a href="https://twitter.com/jashkenas">@jashkenas</a> (Creador de Backbone, Coffescript y Underscore)<br />
         </td>
       </tr>
       <tr>
@@ -130,19 +133,19 @@ title: Talks
         <td>
           <strong>DIY Electronics</strong>
           <ol>
-           <li><strong>Kiwi: Estaciones de bicicletas automatizadas (Arduino + RaspberryPi)</strong> por Alan Reid e Ignacio Orlandini</li>
-            <li><strong>Quadcopter y bot con Arduino</strong> por Gustavo Arjones y Gustavo Saientz</li>
-            <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por Diego Ramírez</li>
+          <li><strong>Kiwi: Estaciones de bicicletas automatizadas (Arduino + RaspberryPi)</strong> <br />por <a href="https://twitter.com/alan_reid">@alan_reid</a> &amp; Ignacio Orlandini</li>
+            <li><strong>Quadcopter y bot con Arduino</strong> por <a href="https://twitter.com/arjones">@arjones</a> y <a href="https://twitter.com/saientzg">@saientzg</a></li>
+            <li><strong>ElBraian: Bot autónomo con RaspberryPi</strong> por <a href="https://twitter.com/DiegoRam">@DiegoRam</a></li>
           </ol>
         </td>
-      </tr>
-      <tr>
+     </tr>
+     <tr>
         <td>24/07/2013</td>
         <td>
           <strong>Nardoz Mobile</strong>
           <ol>
-            <li><strong>iOS, Android, BlackBerry</strong> por Mauro Urani</li>
-            <li><strong>FirefoxOS</strong> por Guillermo Movia</li>
+            <li><strong>iOS, Android, BlackBerry</strong> por <a href="https://twitter.com/f0go">@f0go</a></li>
+            <li><strong>FirefoxOS</strong> por <a href="https://twitter.com/deimidis">@deimidis</a></li>
           </ol>
           <u>Invitados especiales:</u>
           <ul>
@@ -155,14 +158,14 @@ title: Talks
       <tr>
         <td>19/06/2013</td>
         <td>
-          <strong>Real World Akka Recipes</strong> por Jamie Allen (Director of Consulting, Typesafe)<br />
+          <strong>Real World Akka Recipes</strong> por <a href="https://twitter.com/jamie_allen">@jamie_allen</a> (Director of Consulting, Typesafe)<br />
           <span class="label label-important">Buenos Aires High Scalability Group</span>
         </td>
       </tr>
       <tr>
         <td>17/06/2013</td>
         <td>
-          <strong>Effective Akka</strong> por Jamie Allen (Director of Consulting, Typesafe)<br />
+          <strong>Effective Akka</strong> por <a href="https://twitter.com/jamie_allen">@jamie_allen</a> (Director of Consulting, Typesafe)<br />
           <span class="label label-important">Scala User Group Argentina</span>
 
         </td>
@@ -172,9 +175,9 @@ title: Talks
         <td>
           <strong>Nardoz do diablo: Javascript Framework Battle</strong>
           <ol>
-            <li><strong>AngularJS</strong> por Martin Gontovnikas</li>
-            <li><strong>EmberJS</strong> por Mariano Cortesi</li>
-            <li><strong>BackboneJS</strong> por Sebastián Scarano y Matías Urbano</li>
+            <li><strong>AngularJS</strong> por <a href="https://twitter.com/mgonto">@mgonto</a></li>
+            <li><strong>EmberJS</strong> por <a href="https://twitter.com/mcortesi5">@mcortesi5</a></li>
+            <li><strong>BackboneJS</strong> por <a href="https://twitter.com/opensas">@opensas</a> y <a href="https://twitter.com/MatiasUrbano">@MatiasUrbano</a></li>
           </ol>
         </td>
       </tr>
@@ -182,9 +185,9 @@ title: Talks
         <td>16/04/2013</td>
         <td>
           <ol>
-            <li><strong>Ruby on Rails</strong> por Pablo Rodriguez y Martin Gontovnikas</li>
-            <li><strong>Flask en Raspberry Pi</strong> por Diego Ramirez</li>
-            <li><strong>Haml, Jade, Sass, Compass</strong> por Max Kraszewski </li>
+            <li><strong>Ruby on Rails</strong> por <a href="https://twitter.com/derfarg">@derfarg</a> y <a href="https://twitter.com/mgonto">@mgonto</a></li>
+            <li><strong>Flask en Raspberry Pi</strong> por <a href="https://twitter.com/DiegoRam">@DiegoRam</a></li>
+            <li><strong>Haml, Jade, Sass, Compass</strong> por <a href="https://twitter.com/minimalart">@minimalart</a> </li>
           </ol>
         </td>
       </tr>
@@ -195,7 +198,7 @@ title: Talks
     </tbody>
   </table>
 
-  <h3>Año 2012</h3>
+  <h3>2012</h3>
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
@@ -209,20 +212,20 @@ title: Talks
         <td>
           <strong>Desayuno Nardoz</strong>
           <ol>
-            <li><strong>SecureSocial</strong> por Jorge Aliss</li>
-            <li><strong>RaspberryPi</strong> por Fernando Rodriguez Olivera</li>
+            <li><strong>SecureSocial</strong> por <a href="https://twitter.com/jaliss">@jaliss</a></li>
+            <li><strong>RaspberryPi</strong> por <a href="https://twitter.com/frodriguez">@frodriguez</a></li>
           </ol>
         </td>
       </tr>
       <tr>
         <td>??/07/2012</td>
-        <td><strong>RestOpenGov</strong><br />por Alan Reid y Nicolás Melendez</td>
+        <td><strong>RestOpenGov</strong><br />por <a href="https://twitter.com/alan_reid">@alan_reid</a> y <a href="https://twitter.com/nfmelendez">@nfmelendez</a></td>
       </tr>
       <tr>
         <td>11/05/2012</td>
         <td>
           <strong>Hackathon de Gobierno Abierto. Presentación de RestOpenGov</strong><br />
-          por Nicolás Melendez, Alan Reid, Sebastián Scarano y Pablo Paladino
+          por <a href="https://twitter.com/nfmelendez">@nfmelendez</a>, <a href="https://twitter.com/alan_reid">@alan_reid</a>, <a href="https://twitter.com/opensas">@opensas</a> y <a href="https://twitter.com/palamago">@palamago</a>
         </td>
       </tr>
       <tr>
@@ -234,21 +237,21 @@ title: Talks
       </tr>
       <tr>
         <td>27/04/2012</td>
-        <td><strong>Automatización de tareas en múltiples servidores con Puppet</strong><br/>por Fernando Rodriguez Olivera</td>
+        <td><strong>Automatización de tareas en múltiples servidores con Puppet</strong><br/>por <a href="https://twitter.com/frodriguez">@frodriguez</a></td>
       </tr>
       <tr>
         <td>09/04/2012</td>
-        <td><strong>Scalable Nardoz: Aplicaciones concurrentes y distribuídas con Akka</strong><br/>por Fernando Rodriguez Olivera</td>
+        <td><strong>Scalable Nardoz: Aplicaciones concurrentes y distribuídas con Akka</strong><br/>por <a href="https://twitter.com/frodriguez">@frodriguez</a></td>
       </tr>
       <tr>
         <td>09/02/2012</td>
-        <td><strong>Introducción a Arduino</strong><br/>por Alan Reid</td>
+        <td><strong>Introducción a Arduino</strong><br/>por <a href="https://twitter.com/alan_reid">@alan_reid</a></td>
       </tr>
     </tbody>
   </table>
 
 
-  <h3>Año 2011</h3>
+  <h3>2011</h3>
 
   <table class="table table-striped table-bordered">
     <thead>
@@ -264,39 +267,39 @@ title: Talks
       </tr>
       <tr>
         <td>23/11/2011</td>
-        <td><strong>Nardoz filosófico / Preview de Play Framework 2.0</strong><br/>por Sebastián Scarano</td>
+        <td><strong>Nardoz filosófico / Preview de Play Framework 2.0</strong><br/>por <a href="https://twitter.com/opensas">@opensas</a></td>
       </tr>
       <tr>
         <td>11/10/2011</td>
-        <td><strong>Git-flow. Procesamiento distribuído en realtime con Storm</strong><br/>por Gustavo Arjones</td>
+        <td><strong>Git-flow. Procesamiento distribuído en realtime con Storm</strong><br/>por <a href="https://twitter.com/arjones">@arjones</a></td>
       </tr>
       <tr>
         <td>30/09/2011</td>
         <td>
           <strong>Play Framework</strong><br/>
-          por Sebastián Scarano y Jorge Aliss<br />
+          por <a href="https://twitter.com/opensas">@opensas</a> y <a href="https://twitter.com/jaliss">@jaliss</a><br />
           <span class="label label-important">Java User Group Argentina</span>
         </td>
       </tr>
       <tr>
         <td>09/09/2011</td>
-        <td><strong>Charla previa sobre Play Framework para Java User Group Argentina</strong><br/>por Sebastián Scarano y Jorge Aliss</td>
+        <td><strong>Charla previa sobre Play Framework para Java User Group Argentina</strong><br/>por <a href="https://twitter.com/opensas">@opensas</a> y <a href="https://twitter.com/jaliss">@jaliss</a></td>
       </tr>
       <tr>
         <td>17/08/2011</td>
-        <td><strong>Elasticsearch</strong><br/>por Gustavo Arjones</td>
+        <td><strong>Elasticsearch</strong><br/>por <a href="https://twitter.com/arjones">@arjones</a></td>
       </tr>
       <tr>
         <td>04/08/2011</td>
         <td>
           <strong>Introducción a Scala</strong><br/>
-          por Gustavo Arjones<br />
+          por <a href="https://twitter.com/arjones">@arjones</a><br />
           <span class="label label-important">Java User Group Argentina</span>
         </td>
       </tr>
       <tr>
         <td>31/06/2011</td>
-        <td><strong>Java Future calls usando play.F</strong><br/>por Chris Mordue</td>
+        <td><strong>Java Future calls usando play.F</strong><br/>por <a href="https://twitter.com/cmordue">@cmordue</a></td>
       </tr>
       <tr>
         <td>09/06/2011</td>
@@ -304,19 +307,19 @@ title: Talks
       </tr>
       <tr>
         <td>27/04/2011</td>
-        <td><strong>Scala</strong><br/>por Gustavo Arjones y Chris Mordue </td>
+        <td><strong>Scala</strong><br/>por <a href="https://twitter.com/arjones">@arjones</a> y <a href="https://twitter.com/cmordue">@cmordue</a> </td>
       </tr>
       <tr>
         <td>07/04/2011</td>
-        <td><strong>Git</strong><br/>por Gustavo Arjones</td>
+        <td><strong>Git</strong><br/>por <a href="https://twitter.com/arjones">@arjones</a></td>
       </tr>
       <tr>
         <td>22/03/2011</td>
-        <td><strong>Mockito, Integración Continua</strong><br/>por Gustavo Arjones</td>
+        <td><strong>Mockito, Integración Continua</strong><br/>por <a href="https://twitter.com/arjones">@arjones</a></td>
       </tr>
       <tr>
         <td>10/03/2011</td>
-        <td><strong>Node.js</strong><br/>por Alan Reid</td>
+        <td><strong>Node.js</strong><br/>por <a href="https://twitter.com/alan_reid">@alan_reid</a></td>
       </tr>
       <tr>
         <td>wormhole</td>
@@ -328,4 +331,6 @@ title: Talks
       </tr>
     </tbody>
   </table>
+
+  
 </div>
