--- a/community.html
+++ b/community.html
@@ -5,24 +5,30 @@ title: Comunidad
 {% include JB/setup %}
 
 <p>
-	Algunos integrantes que formaron otros meetups afines (listados abajo), en los que se reúnen para tratar temas específicos :)
+  Sumate a la nuestra comunidad de Slack! 
+  <script async defer src="http://slack.nardoz.com/slackin.js"></script>
 </p>
+
+<h3>Meetups amigos</h3>
 
 <div class="row groups">
 
-	<div class="span3 meetup">
+	<div class="span6 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HTmpl" frameborder="0"></iframe>
 	</div>
 
-	<div class="span3 meetup">
-		<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
+	<div class="span6 meetup">
+		<iframe width="225" height="570" src="http://meetu.ps/2NQnVY" frameborder="0"></iframe>
 	</div>
 
-	<div class="span3 meetup">
+</div>
+<div class="row groups">
+
+	<div class="span6 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
 	</div>
 
-	<div class="span3 meetup">
+	<div class="span6 meetup">
 		<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
 	</div>
 
