--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@ title: Nardoz
 {% include JB/setup %}
 
 <p>
-  Nardoz es una comunidad de desarrolladores que, cerveza de por medio, se reúnen a hablar y compartir sus experiencias con las últimas tecnologías.</p> 
+  Nardoz es una comunidad de desarrolladores que, cerveza de por medio, se reúnen a hablar y compartir sus experiencias con las últimas tecnologías.</p>
 <p>Las charlas son tan variadas como los intereses del grupo: desde <strong>programación</strong>, <strong>Big Data</strong> y <strong>sistemas distribuídos</strong>, hasta <strong>Open Hardware</strong> y <strong>Open Data</strong>.
 </p>
 <p>
-  Sumate a la nuestra comunidad de Slack! 
+  Sumate a la nuestra comunidad de Slack!
   <script async defer src="http://slack.nardoz.com/slackin.js"></script>
 </p>
 
 <hr>
+
+<h3>2016</h3>
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Fecha</th>
+      <th>Título</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>02/07/2015</td>
+      <td>
+        <strong>Nardoz de DOcker</strong>
+        <ol>
+          <li><strong>Intro a Docker</strong> por <a target="_blank" href="https://twitter.com/gvilarino">@gvilarino</a></li>
+          <li><strong>Docker avanzado</strong> por <a target="_blank" href="https://twitter.com/marcosnils">@marcosnils</a></li>
+          <li><strong>RaspberryPi + Spotify + Slack</strong> por <a target="_blank" href="https://twitter.com/baires">@baires</a></li>
+        </ol>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 <h3>2015</h3>
 <table class="table table-striped table-bordered">
@@ -27,7 +50,7 @@ title: Nardoz
     <tr>
       <td>02/07/2015</td>
       <td>
-        <strong>Nardoz de Rust</strong> 
+        <strong>Nardoz de Rust</strong>
         <ol>
           <li><strong>Conceptos principales y diferenciales</strong> por <a target="_blank" href="https://twitter.com/nfmelendez">@nfmelendez</a></li>
           <li><strong>Construir una Base de Datos en Rust</strong> por <a target="_blank" href="https://twitter.com/seppo0010">@seppo0010</a></li>
@@ -109,7 +132,7 @@ title: Nardoz
      <tr>
         <td>17/12/2013</td>
         <td>
-          <strong>Asado de fin de año</strong> 
+          <strong>Asado de fin de año</strong>
         </td>
      </tr>
     <tr>
