--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Nardoz
     <tr>
       <td>21/04/2016</td>
       <td>
-        <strong>Nardoz de DOcker</strong>
+        <strong>Nardoz de Docker</strong>
         <ol>
           <li><strong>Intro a Docker</strong> por <a target="_blank" href="https://twitter.com/gvilarino">@gvilarino</a></li>
           <li><strong>Docker avanzado</strong> por <a target="_blank" href="https://twitter.com/marcosnils">@marcosnils</a></li>
