--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@ title: Nardoz
   </thead>
   <tbody>
     <tr>
+      <td>10/08/2016</td>
+      <td>
+        <strong>Crypto / Redux / Escalando infraestructura crítica</strong>
+        <ol>
+          <li><strong>Intro to crypto</strong> por <a target="_blank" href="https://twitter.com/quixote_arg">@quixote_arg</a></li>
+          <li><strong>Intro to Redux </strong> por <a target="_blank" href="https://twitter.com/topicus">@topicus</a></li>
+          <li><strong>Crónica de una escala anunciada</strong> por <a target="_blank" href="https://twitter.com/dschenkelman">@dschenkelman</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
+      <td>02/06/2016</td>
+      <td>
+        <strong>Docker / Ethereum / Resin</strong>
+        <ol>
+          <li><strong>Docker avanzado: docker-compose y docker-swarm</strong> por <a target="_blank" href="https://twitter.com/gvilarino">@gvilarino</a></li>
+          <li><strong>Intro to the Ethereum Block Chain for devs </strong> por <a target="_blank" href="https://twitter.com/nsandller">@nsandller</a></li>
+          <li><strong>Devops for IoT</strong> por <a target="_blank" href="https://twitter.com/pcarranzav">@pcarranzav</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
       <td>21/04/2016</td>
       <td>
         <strong>Nardoz de Docker</strong>
