--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+<!-- --- -->
 layout: page
 title: Nardoz
 ---
@@ -15,6 +15,29 @@ title: Nardoz
 
 <hr>
 
+<h3>2017</h3>
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Fecha</th>
+      <th>Título</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>02/02/2017</td>
+      <td>
+        <strong>WebVR / React / Rust</strong>
+        <ol>
+          <li><strong>WebVR pa’ los pibes (y las pibas también)</strong> por <a target="_blank" href="https://twitter.com/impronunciable">@impronunciable</a></li>
+          <li><strong>How to (maybe) structure a React application</strong> por <a target="_blank" href="https://twitter.com/keyserfaty ">@keyserfaty </a></li>
+          <li><strong>Rust de abajo para arriba</strong> por <a target="_blank" href="https://twitter.com/seppo0011">@seppo0011</a></li>
+        </ol>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 <h3>2016</h3>
 <table class="table table-striped table-bordered">
   <thead>
@@ -24,6 +47,38 @@ title: Nardoz
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>15/11/2016</td>
+      <td>
+        <strong>Asado Nardoz de fin de año</strong>
+        <ol>
+          <li><strong>Perdiodismo de Datos</strong> por <a target="_blank" href="https://twitter.com/palamago">@palamago</a></li>
+          <li><strong>Move slow &amp; make things</strong> por <a target="_blank" href="https://twitter.com/alan_reid ">@alan_reid </a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
+      <td>15/11/2016</td>
+      <td>
+        <strong>Videojuegos en 13KB / Datastax / Reactive Scala</strong>
+        <ol>
+          <li><strong>Videojuegos en 13KB</strong> por <a target="_blank" href="https://twitter.com/agar3s">@agar3s</a></li>
+          <li><strong>Datastax Analytics</strong> por <a target="_blank" href="https://twitter.com/arjones">@arjones</a></li>
+          <li><strong>Reactive programming en Scala</strong> por <a target="_blank" href="https://twitter.com/clariallende">@clariallende</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
+      <td>13/09/2016</td>
+      <td>
+        <strong>ELM / Ansible / Top-Secret</strong>
+        <ol>
+          <li><strong>Intro to ELM</strong> por <a target="_blank" href="https://twitter.com/quixote_arg">@quixote_arg</a></li>
+          <li><strong>Ansible 202</strong> por <a target="_blank" href="https://twitter.com/sebamontini">@sebamontini</a></li>
+          <li><strong>TOP SECRET PROJECT</strong> por <a target="_blank" href="https://twitter.com/marcosnils">@marcosnils</a></li>
+        </ol>
+      </td>
+    </tr>
     <tr>
       <td>10/08/2016</td>
       <td>
