Update talk list

--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@ title: Nardoz
   </thead>
   <tbody>
     <tr>
+      <td>08/08/2017</td>
+      <td>
+        <strong>React Storybook &amp; Snapshot Testing / Polybox / Elasticsearch en AWS</strong>
+        <ol>
+          <li><strong>React Storybook &amp; Snapshot Testing    </strong> por <a target="_blank" href="https://twitter.com/solepano">@solepano</a></li>
+          <li><strong>Polybox</strong> por <a target="_blank" href="https://twitter.com/marcosnils">@marcosnils</a></li>
+          <li><strong>Lecciones aprendidas con elasticsearch en AWS </strong> por <a target="_blank" href="https://www.linkedin.com/in/lucia-brizuela-0472ba29/">Lucía Brizuela</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
+      <td>30/05/2017</td>
+      <td>
+        <strong>Chakra + JS types / Nomad vs. Docker / RasPi sumergible</strong>
+        <ol>
+          <li><strong>Agregando tipos a JS + Chakra</strong> por <a target="_blank" href="https://nardoz.slack.com/team/fcaste">Franco Castellacci</a></li>
+          <li><strong>Nomad: a love story </strong> por <a target="_blank" href="https://twitter.com/sebamontini">@sebamontini</a></li>
+          <li><strong>Haciendo un termómetro digital sumergible con la Raspberry Pi</strong> por <a target="_blank" href="https://twitter.com/nfmelendez">@nfmelendez</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
       <td>02/02/2017</td>
       <td>
         <strong>WebVR / React / Rust</strong>
