--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@ title: Nardoz
 
 <hr>
 
+<h3>2018</h3>
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Fecha</th>
+      <th>Título</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>01/02/2018</td>
+      <td>
+        <strong>Sorting internals en JS / Minar Ethereum en tu casa</strong>
+        <ol>
+          <li><strong>¿Cómo ordenar tus medias usando Javascript?</strong> por <a target="_blank" href="https://twitter.com/koste4">@koste4</a></li>
+          <li><strong>La odisea de minar Ethereum en casa</strong> por <a target="_blank" href="https://twitter.com/VicTheDevops">@VicTheDevops</a></li>
+        </ol>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 <h3>2017</h3>
 <table class="table table-striped table-bordered">
   <thead>
@@ -24,6 +46,36 @@ title: Nardoz
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>05/12/2017</td>
+      <td>
+        <strong>Open Shift / Beyond Continuous Delivery / ASADO DE FIN DE AÑO</strong>
+        <ol>
+          <li><strong>Intro a OpenShift</strong> por <a target="_blank" href="https://twitter.com/vkmc">@vkmc</a></li>
+          <li><strong>Más allá de Continuous Delivery</strong> por <a target="_blank" href="https://twitter.com/gvilarino">@gvilarino</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
+      <td>04/10/2017</td>
+      <td>
+        <strong>Rust / Desarrollar sin jefes / Concurrencia en Java 8</strong>
+        <ol>
+          <li><strong>A Rusty world</strong> por <a target="_blank" href="https://twitter.com/badboy_">@badboy_</a></li>
+          <li><strong>Desarrollar sin jefes + Concurrencia en Java 8</strong> por <a target="_blank" href="https://twitter.com/gi_decuzzi">@gi_decuzzi</a></li>
+        </ol>
+      </td>
+    </tr>
+    <tr>
+      <td>06/09/2017</td>
+      <td>
+        <strong>GraphQL / Natural Language Processing</strong>
+        <ol>
+          <li><strong>Necesitás GraphQL</strong> por <a target="_blank" href="https://twitter.com/okbel">@okbel</a></li>
+          <li><strong>Un toolkit de NLP en español</strong> por <a target="_blank" href="https://twitter.com/eisenjulian">@eisenjulian</a></li>
+        </ol>
+      </td>
+    </tr>
     <tr>
       <td>08/08/2017</td>
       <td>
